# battery-data-cruncher

./: .gitignore  notes.txt  pyproject.toml
battery_data_cruncher/dagster/: __init__.py
battery_data_cruncher/model/: cells.py
battery_data_cruncher/sources/: secondlife.py
output/: models.csv
tests/: test_model.py
